Make project approval mail truly anonymous.  Also make membership acceptance email truly anonymous.  A few other emails related to project membership are still not anonymous though.  New function AnonSENDMAIL in libtestbed which will try to make sure there is no trace of the current user in the mail sent.
For now, stop sending membership approval related email to the project
admin list since this will also go to testbed-approval.  There is also
some code to remove testbed-approval from the proj-admin list after
the acceptance email but this is disabled for now since some times people
reply to the approval email.

--- a/collab/mailman/GNUmakefile.in
+++ b/collab/mailman/GNUmakefile.in
@@ -13,7 +13,8 @@ include $(OBJDIR)/Makeconf
 
 SBIN_SCRIPTS		= addmmlist delmmlist setmmlistmembers mmsetup \
 			  setmmpasswd mmlistmembership mmmodifymember \
-			  addmmuser delmmuser addprojadminlist
+			  addmmuser delmmuser \
+			  addprojadminlist closeprojadminlist
 LIBEXEC_SCRIPTS		= webaddmmlist webdelmmlist websetmmpasswd mmxlogin \
 			  webmmlistmembership
 CTRL_LIBEXEC_SCRIPTS	= genaliases
@@ -24,7 +25,7 @@ CTRL_SBIN_SCRIPTS	= mailmanproxy
 SETUID_BIN_SCRIPTS   = 
 SETUID_SBIN_SCRIPTS  = addmmuser delmmuser addmmlist delmmlist \
 			setmmlistmembers setmmpasswd mmlistmembership \
-			mmmodifymember addprojadminlist
+			mmmodifymember addprojadminlist closeprojadminlist
 SETUID_LIBX_SCRIPTS  = mmxlogin
 
 #
