Add "Affiliation Abbreviation" field to users table and use it next to the User Name (or id) in various tables.  This also involved adding the field to the newproject, joinproject, and moduserinfo forms.
Note: also modified 4.149 database-migrate.txt entry to add a note
to add the necessary "slot" to table_regex.

--- a/account/newuser.in
+++ b/account/newuser.in
@@ -154,7 +154,8 @@ my %usually_required = ("address"	=> "usr_addr",
 		        "country"	=> "usr_country",
 		        "phone"	        => "usr_phone",
 		        "title"	        => "usr_title",
-		        "affiliation"	=> "usr_affil");
+		        "affiliation"	=> "usr_affil",
+		        "affiliation_abbreviation" => "usr_affil_abbrev");
 if ($type eq "wikionly") {
     %optional = (%optional, %usually_required);
 } else {
