Set the charset for all emulab pages to utf-8 which is needed to display foreign names correctly.  Also added three rows to table_regex: tinytext_utf8, text_utf8, fulltext_utf8
Enhanced form_defs.php:

  - Add Support for Textarea

  - Add Support for a vertical list, for example see Category in
    submitpub.php

  - Add support for dumping the form values in plain text, used in the
    email I send to testbed-ops.

  - Change Error Reporting text for subfields such as in a list so
    they also include the text from the outer field, for example in
    newosid "ping" will become "OS Features, ping".  I needed this
    since some of my subfields didn't have labels and it seamed like
    the right thing to do.

  - Set #return_value to 1 in FormRenderCheckBox if it not already
    specified

  - In FormRenderSelect, if the #value is not in the list add it to
    the end.

  - Add support for "display" type, to just display some text in the
    table

  - Possibly some other little things I forgot about.

New site variable PUBSUPPORT.

Implement FS#201: Provide users a way to add a paper that used Emulab
see (https://users.emulab.net/flyspray/?do=details&id=201), summary of
changes:

  - Controlled via the new site variable PUBSUPPORT.

  - The emulab_papers spread sheet is now frozen all new changes
    should be made using the new system.

  - New pages submitpub.php for users to submit a new publication
    with different views for admins and non-admins.

  - New page expubs.php to replace doc/expubs.html, lists publications
    in database.  Also allows admins to edit publications.

  - Project members can edit papers associated with the project as
    long as they have local_root or higher privileges. Papers for a
    project are listed under a new tab in the showproject page. I keep
    track of the last person to edit the paper submission in addition
    to who initially submitted it.

  - Users can modify papers they submitted which is needed if the
    projec

--- a/configure.in
+++ b/configure.in
@@ -155,6 +155,7 @@ AC_SUBST(OUTERBOSS_NODENAME)
 AC_SUBST(OUTERBOSS_XMLRPCPORT)
 AC_SUBST(OUTERBOSS_SSLCERTNAME)
 AC_SUBST(PLABSUPPORT)
+AC_SUBST(PUBSUPPORT)
 AC_SUBST(WIKISUPPORT)
 AC_SUBST(MAILMANSUPPORT)
 AC_SUBST(BUGDBSUPPORT)
@@ -256,6 +257,7 @@ OUTERBOSS_NODENAME=""
 OUTERBOSS_XMLRPCPORT=3069
 OUTERBOSS_SSLCERTNAME="/etc/outer_emulab.pem"
 PLABSUPPORT=0
+PUBSUPPORT=0
 WIKISUPPORT=0
 BUGDBSUPPORT=0
 OPSDBSUPPORT=0
