--- a/www/defs.php3.in
+++ b/www/defs.php3.in
@@ -25,6 +25,7 @@ $TBWWW		= "@TBWWW@";
 $THISHOMEBASE	= "@THISHOMEBASE@";
 $ELABINELAB     = @ELABINELAB@;
 $PLABSUPPORT    = @PLABSUPPORT@;
+$PUBSUPPORT     = @PUBSUPPORT@;
 $WIKISUPPORT    = @WIKISUPPORT@;
 $TRACSUPPORT    = @TRACSUPPORT@;
 $BUGDBSUPPORT   = @BUGDBSUPPORT@;
