--- a/www/defs.php3.in
+++ b/www/defs.php3.in
@@ -44,6 +44,7 @@ $TRACCOOKIENAME = "TracCookie";
 $MAILMANURL     = "http://${USERNODE}/mailman";
 $OPSCVSURL      = "http://${USERNODE}/cvsweb/cvsweb.cgi";
 $OPSJETIURL     = "http://${USERNODE}/jabber/jeti.php";
+$WIKIDOCURL     = "http://${WIKINODE}/wikidocs/wiki";
 $MIN_UNIX_UID   = @MIN_UNIX_UID@;
 $MIN_UNIX_GID   = @MIN_UNIX_GID@;
 $EXPOSELINKTEST = 1;
